objects/S3_Credentials__c.object
<CustomObject>
    <description>Store S3 key and secret for the AWS account</description>
    <fields>
        <fullName>BucketName__c</fullName>
        <label>BucketName</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>Store Key Value</description>
        <label>Key</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <label>OrgId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <description>Store Secret Value</description>
        <label>Secret</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>S3 Credentials</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Credentials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S3 Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>